[package]
name = "zhibojian"
version = "0.1.0"
authors = ["豆腐居士"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
ffmpeg-next = "7.0.4"
